django-project/k8s/recipe-service/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-service-canary
  namespace: recipeapp
  labels:
    app: recipe-service
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-service
      version: canary
  template:
    metadata:
      labels:
        app: recipe-service
        version: canary
    spec:
      containers:
        - name: recipe-service
          image: recipe-service:canary
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
