django-project/k8s/recipe-service/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-service-canary
  namespace: recipeapp
spec:
  selector:
    app: recipe-service
    version: canary
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
