django-project/k8s/recipe-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-service
  namespace: recipeapp
spec:
  selector:
    app: recipe-service
    version: stable
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
